Fixed scrollbar

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -10,7 +10,7 @@
 // SCROLLBAR
 
 .overflow-wrap::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 .overflow-wrap::-webkit-scrollbar-track {
@@ -20,7 +20,8 @@
 
 .overflow-wrap::-webkit-scrollbar-thumb {
   border-radius: 20px;
-  background-color: var(--color-black);
+  background-color: var(--color-gray);
+  box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
 }
 
 // MODAL
