--- a/tokens/token.scss
+++ b/tokens/token.scss
@@ -153,7 +153,7 @@ body {
 // SCROLLBAR
 
 body::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 body::-webkit-scrollbar-track {
@@ -163,5 +163,6 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   border-radius: 20px;
-  background-color: var(--color-black);
+  background-color: var(--color-gray);
+  box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
 }
